Added Roboflow API info in README.md. Fixed some links in README.md. Removed cached mp4 files.

--- a/models/train/object_detection/object_detection_train.ipynb
+++ b/models/train/object_detection/object_detection_train.ipynb
@@ -26,8 +26,9 @@
       ],
       "source": [
         "from roboflow import Roboflow\n",
+        "from config import ROBOFLOW_API_KEY\n",
         "\n",
-        "rf = Roboflow(api_key=\"Ey3TRoCLDeNHTBdFR26O\")\n",
+        "rf = Roboflow(api_key=ROBOFLOW_API_KEY)\n",
         "project = rf.workspace(\"mihailo\").project(\"football-players-detection-3zvbc-7ocfe\")\n",
         "version = project.version(2)\n",
         "dataset = version.download(\"yolov8\")"
