--- a/models/train/keypoints_detection/keypoints_detection_train.ipynb
+++ b/models/train/keypoints_detection/keypoints_detection_train.ipynb
@@ -38,8 +38,9 @@
       ],
       "source": [
         "from roboflow import Roboflow\n",
+        "from config import ROBOFLOW_API_KEY\n",
         "\n",
-        "rf = Roboflow(api_key=\"Ey3TRoCLDeNHTBdFR26O\")\n",
+        "rf = Roboflow(api_key=ROBOFLOW_API_KEY)\n",
         "project = rf.workspace(\"mihailo\").project(\"football-field-detection-f07vi-apxzb\")\n",
         "version = project.version(1)\n",
         "dataset = version.download(\"yolov8\")"
