Minor bug fixes on object detection training notebook.

--- a/models/train/object_detection/object_detection_train.ipynb
+++ b/models/train/object_detection/object_detection_train.ipynb
@@ -2,6 +2,18 @@
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import sys\n",
+        "import os\n",
+        "\n",
+        "sys.path.append(os.path.join('..', '..', '..'))"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 5,
       "metadata": {
         "colab": {
