Removed redundant code from main.py. Updated requierements.txt

--- a/models/train/object_detection/object_detection_train.ipynb
+++ b/models/train/object_detection/object_detection_train.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -14,7 +14,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -28,11 +28,7 @@
           "output_type": "stream",
           "text": [
             "loading Roboflow workspace...\n",
-            "loading Roboflow project...\n",
-            "Creating new Ultralytics Settings v0.0.6 file ✅ \n",
-            "View Ultralytics Settings with 'yolo settings' or at '/root/.config/Ultralytics/settings.json'\n",
-            "Update Settings with 'yolo settings key=value', i.e. 'yolo settings runs_dir=path/to/dir'. For help see https://docs.ultralytics.com/quickstart/#ultralytics-settings.\n",
-            "Dependency ultralytics==8.0.196 is required but found version=8.3.4, to fix: `pip install ultralytics==8.0.196`\n"
+            "loading Roboflow project...\n"
           ]
         }
       ],
@@ -43,7 +39,7 @@
         "rf = Roboflow(api_key=ROBOFLOW_API_KEY)\n",
         "project = rf.workspace(\"mihailo\").project(\"football-players-detection-3zvbc-7ocfe\")\n",
         "version = project.version(2)\n",
-        "dataset = version.download(\"yolov8\")"
+        "dataset = version.download(\"yolov11\")"
       ]
     },
     {
